<resources>
    <string name="app_name">Ceylon Flavours</string>
    <string name="food_menu">Food Menu</string>
    <string name="main_course">Main Course</string>
    <string name="fried_rice_rs_850_n_baked_steak_rs_1500_n_spicy_chicken_rs_950_n_grilled_salmon_fish_rs_1800_n_deep_bake_goose_rs_1400">• Fried Rice — Rs. 850\n• Baked Steak — Rs. 1500\n• Spicy Chicken — Rs. 950\n• Grilled Salmon Fish — Rs. 1800\n• Deep Bake Goose — Rs. 1400</string>
    <string name="appetizers">Appetizers</string>
    <string name="back">Back</string>
    <string name="about_us">About Us</string>
    <string name="welcome_to_ceylon_flavours">Welcome to Ceylon Flavours!</string>
    <string name="ceylon_flavours_is_your_trusted_online_food_reservation_and_delivery_platform_we_aim_to_bring_you_the_best_sri_lankan_taste_served_fresh_and_delivered_with_love">Ceylon Flavours is your trusted online food reservation and delivery platform. We aim to bring you the best Sri Lankan taste, served fresh and delivered with love.</string>
    <string name="our_mission_n_deliver_quality_food_n_enhance_your_dining_experience_n_easy_reservation_and_order_process">Our Mission:\n• Deliver quality food\n• Enhance your dining experience\n• Easy reservation and order process</string>
    <string name="thank_you_for_being_part_of_our_journey">Thank you for being part of our journey!</string>
    <string name="achievements">Achievements</string>
    <string name="fastest_order_your_last_order_was_delivered_in_just_20_minutes_speed_and_flavor_combined">🏍️ Fastest Order - Your last order was delivered in just 20 minutes! Speed and flavor combined!</string>
    <string name="perfect_rating_you_rated_5_dishes_with_5_stars_thanks_for_the_love">⭐ Perfect Rating - You rated 5 dishes with 5 stars! Thanks for the Love!</string>
    <string name="table_booking_pro_you_ve_reserved_tables_5_times_this_month">🍽️ Table Booking Pro - You’ve reserved tables 5 times this month!</string>
    <string name="loyal_foodie_10_orders_completed_this_month_we_love_having_you_as_a_regular">🍜 Loyal Foodie - 10 orders completed this month! We love having you as a regular!</string>
    <string name="order_streak_you_ve_ordered_3_days_in_a_row_keep_the_delicious_streak_alive">🔥 Order Streak - You\'ve ordered 3 days in a row! Keep the delicious streak alive!</string>
    <string name="first_order_congratulations_on_your_first_order_welcome_to_ceylon_flavours">🍔 First Order - Congratulations on your first order! Welcome to Ceylon Flavours!</string>
    <string name="cart">Cart</string>
    <string name="fried_rice">Fried Rice</string>
    <string name="rs_850">Rs. 850</string>
    <string name="chicken_pie">Chicken Pie</string>
    <string name="rs_700">Rs. 700</string>
    <string name="spaghetti_pasta">Spaghetti Pasta</string>
    <string name="fresh_juice">Fresh Juice</string>
    <string name="rs_450">Rs. 450</string>
    <string name="fruit_salad">Fruit Salad</string>
    <string name="rs_550">Rs. 550</string>
    <string name="check_out">Check out</string>
    <string name="reservation">Reservation</string>
    <string name="help_and_support">Help and Support</string>
    <string name="for_any_queries_or_complaints_please_contact_us">For any queries or complaints, please contact us:</string>
    <string name="_94_77_123_4567_n_support_ceylonflavours_lk">📞 +94 77 123 4567\n📩 support@ceylonflavours.lk</string>
    <string name="faqs_n_n_how_to_reserve_a_table_n_how_to_cancel_an_order_n_payment_issues_n_how_to_contact_restaurant">FAQs:\n\n• How to reserve a table?\n• How to cancel an order?\n• Payment issues?\n• How to contact restaurant?</string>
    <string name="avocado_toast_rs_550_n_spaghetti_pasta_rs_850_n_chicken_pie_rs_700_n_fish_sandwich_rs_950_n_vegetable_salad_rs_870">• Avocado Toast — Rs. 550\n• Spaghetti Pasta — Rs. 850\n• Chicken Pie — Rs. 700\n• Fish Sandwich — Rs. 950\n• Vegetable Salad — Rs. 870</string>
    <string name="beverages">Beverages</string>
    <string name="mineral_water_rs_150_n_jasmine_tea_rs_250_n_lemonade_rs_300_n_fresh_juice_rs_450_n_rosemilk_rs_380">• Mineral Water — Rs. 150\n• Jasmine Tea — Rs. 250\n• Lemonade — Rs. 300\n• Fresh Juice — Rs. 450\n• Rosemilk — Rs. 380</string>
    <string name="desserts">Desserts</string>
    <string name="chocolate_cake_rs_650_n_fruit_salad_rs_550_n_ice_cream_rs_450_n_watalappan_rs_380_n_lava_cake_rs_750">• Chocolate Cake — Rs. 650\n• Fruit Salad — Rs. 550\n• Ice Cream — Rs. 450\n• Watalappan — Rs. 380\n• Lava Cake — Rs. 750</string>
    <string name="login_here">Login Here ...</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="notifications">Notifications</string>
    <string name="get_20_off_on_your_next_order">Get 20% off on your next order! 🍽️</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="your_table_is_waiting_at_restaurant">Your table is waiting at [Restaurant]. 🍽️</string>
    <string name="_2_hours">2 hours</string>
    <string name="enjoy_your_meal_don_t_forget_to_leave_a_review">Enjoy your meal! Don\'t forget to leave a review! 🍽️</string>
    <string name="_7_hours">7 hours</string>
    <string name="your_order_is_on_the_way">Your order is on the way! 🚚</string>
    <string name="_13_hours">13 hours</string>
    <string name="how_was_your_meal_leave_a_review">How was your meal? Leave a review!</string>
    <string name="_20_hours">20 hours</string>
    <string name="new_dishes_added_to_our_menu">New dishes added to our menu! 📣</string>
    <string name="_1_day">1 day</string>
    <string name="discover_the_authentic_taste_of_sri_lanka_from_spicy_delights_to_sweet_treats_every_bite_tells_a_story_savor_the_flavour_with_us">Discover the authentic taste of Sri Lanka — from spicy delights to sweet treats, every bite tells a story. Savor the flavour with us!</string>
    <string name="next">Next</string>
    <string name="fresh_tasty_and_just_a_tap_away">Fresh, Tasty and Just a Tap Away!</string>
    <string name="explore_our_delicious_menu_filled_with_fresh_mouth_watering_sri_lankan_flavours_delivered_right_to_your_fingertips">Explore our delicious menu filled with fresh, mouth-watering Sri Lankan flavours — delivered right to your fingertips</string>
    <string name="your_flavour_journey_starts_here">Your Flavour Journey Starts Here!</string>
    <string name="start_your_food_journey_with_ceylon_flavours_fresh_ingredients_traditional_recipes_and_fast_delivery">Start your food journey with Ceylon Flavours — fresh ingredients, traditional recipes, and fast delivery.</string>
    <string name="get_started">Get Started</string>
    <string name="total_bill_rs_2800">Total Bill : Rs.2800</string>
    <string name="_3_items_estimated_delivery_time_20_min">3 items • Estimated delivery Time 20 Min</string>
    <string name="home_address">Home Address</string>
    <string name="thisiri_near_the_temple_kalutawala_nsri_lanka">“Thisiri”, Near the Temple , Kalutawala ,\nSri Lanka</string>
    <string name="credit_debit_cards">Credit / Debit cards</string>
    <string name="add_new_card">ADD NEW CARD</string>
    <string name="_7890">•••• •••• •••• 7890</string>
    <string name="hashendra_k_a_v">Hashendra K A V</string>
    <string name="change_payment_method">Change payment Method</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="pay_now">PAY NOW</string>
    <string name="phone_number">Phone Number :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="username">Username :</string>
    <string name="name">Name :</string>
    <string name="_071_433_7879">071 433 7879</string>
    <string name="rate_us">Rate Us</string>
    <string name="we_hope_you_are_enjoying_our_service_nplease_rate_us">We hope you are enjoying our service.\nPlease rate us!</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="enter_email">Enter email</string>
    <string name="date">Date</string>
    <string name="number_of_members">Number of Members</string>
    <string name="decrease">Decrease</string>
    <string name="_5">5</string>
    <string name="increase">Increase</string>
    <string name="time">Time</string>
    <string name="_07_00_pm">07.00 PM</string>
    <string name="select_time">Select Time</string>
    <string name="additional">Additional</string>
    <string name="submit_your_booking">Submit Your Booking</string>
    <string name="log_out">Log Out</string>
</resources>