<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Achievements">


    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="Back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/achievements"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gapView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Achievements -->
    <LinearLayout
        android:id="@+id/achievementsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/gapView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/achievement_background"
            android:padding="12dp"
            android:text="@string/fastest_order_your_last_order_was_delivered_in_just_20_minutes_speed_and_flavor_combined"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/achievement_background"
            android:padding="12dp"
            android:text="@string/perfect_rating_you_rated_5_dishes_with_5_stars_thanks_for_the_love"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/achievement_background"
            android:padding="12dp"
            android:text="@string/table_booking_pro_you_ve_reserved_tables_5_times_this_month"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/achievement_background"
            android:padding="12dp"
            android:text="@string/loyal_foodie_10_orders_completed_this_month_we_love_having_you_as_a_regular"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/achievement_background"
            android:padding="12dp"
            android:text="@string/order_streak_you_ve_ordered_3_days_in_a_row_keep_the_delicious_streak_alive"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/achievement_background"
            android:padding="12dp"
            android:text="@string/first_order_congratulations_on_your_first_order_welcome_to_ceylon_flavours"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
